[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.8"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]

name = "server"
path = "src/server.rs"
